--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">    <title>PaginaWeb</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">    
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
         <link href="style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/3bfe0029e4.js" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
         
     <header>
         <div class="contenedor">
-        <img src="Patitas_adopciones.png" width="210px">
+        <img src="picture/Patitas_adopciones.png" width="210px">
         <input type="checkbox" id="menu-check">
         <label id="menu" for="menu-check">
             <span id="menu-abrir">&#9776;</span>
@@ -33,7 +33,7 @@
         </div>
     </header>
     <menu>
-        <img src="header-form-1.jpg" width="600px">
+        <img src="picture/header-form-1.jpg" width="600px">
         <div class="formulario">
         <h2>Formulario de registro</h2>
         <form class="form" action="https://formspree.io/f/mpzenogz" method="POST">
