--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
         <title>Patitas Adopciones</title>
     </head>
 
-<body>
+<body class="container">
         
     <header>
         <div class="contenedor">
