--- a/requisitos_adopcion.html
+++ b/requisitos_adopcion.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/3bfe0029e4.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="container">
  
         <header>
             <div class="contenedor">
