--- a/catalogo.html
+++ b/catalogo.html
@@ -17,7 +17,7 @@
         
 <header>
     <div class="contenedor">
-    <img src="picture/Patitas_adopciones.png" width="210px">
+    <img src="picture/Patitas_adopciones.png" >
     <input type="checkbox" id="menu-check">
     <label id="menu" for="menu-check">
         <span id="menu-abrir">&#9776;</span>
