--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
 <header>
     <div class="contenedor">
-    <img src="picture/Patitas_adopciones.png" width="210px">
+    <img src="picture/Patitas_adopciones.png"  class="logoIndex">
     <input type="checkbox" id="menu-check">
     <label id="menu" for="menu-check">
         <span id="menu-abrir">&#9776;</span>
@@ -42,7 +42,8 @@
    
     <p><a href="contacto.html" class="boton">Formulario de adopción</a></p>
         </div>
-    <img src="picture/perrito.jpg">
+    <!--<img src="picture/perrito.jpg">-->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Jv1iolzbvZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
     </div>
 </main>
 <aside>
